--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -3,6 +3,9 @@
 @import "main.scss";
 
 @import "partials/header.scss";
+@import "partials/footer.scss";
+@import "partals/form.scss";
+@import "partials/socialLogin.scss";
 @import "pages/home.scss";
 
 body {
